# django-ctb

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  Justfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
django_ctb/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  models.py  services.py  tasks.py
django_ctb/api/: serializers.py  urls.py  views.py
django_ctb/github/: services.py
django_ctb/migrations/: 0001_initial.py  0002_projectbuild_excluded_project_parts_and_more.py  0002_projectbuildpartshortage_fallback_part_and_more.py  0003_part_equivalent_to_and_more.py  0003_projectbuildpartreservation_order_key_and_more.py  0004_owner.py  0004_owner_squashed_0008_alter_inventoryline_owner.py  0004_projectbuildpartreservation_project_part.py  0005_implicitprojectpart_owner_inventory_owner_and_more.py  0005_remove_projectversion_parts_and_more.py  0006_alter_implicitprojectpart_owner_and_more.py  0006_vendororder_placed_vendorpart_lot_cost.py
django_ctb/mouser/: __init__.py  client.py  services.py
django_ctb/services/: __init__.py  analyze.py  build.py  order.py  sync.py
docs/: project-end-to-end.puml  requirements.txt
docs/scripts/: pre_install.sh
docs/source/: conf.py  features.rst  guide.rst  index.rst  project-end-to-end.puml  reference.rst  setup.rst
docs/source/_ext/: bdd.py
frontend/: .gitignore  .prettierrc  eslint.config.js  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/.storybook/components/: TableWrapper.svelte
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/stories/: PureFilteredPartTable.stories.svelte  PurePart.stories.svelte  PurePartTable.stories.svelte  (+3 more)
test_project/: manage.py
test_project/test_project/: asgi.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  github_services_test_data.py  test_admin.py  test_github_services.py  test_models.py  test_mouser_client.py  test_mouser_services.py  test_services.py
tests/api/: conftest.py  test_api.py  test_crud.py
tests/mouser/: data.py  test_client.py  test_services.py
tests/services/: test_analyze.py  test_build.py  test_order.py  test_sync.py
(+25 files in other folders)
